--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Giphtastic Giphy Search</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,26 +23,19 @@
       <h1 class="display-3">GifTastic Giphy Searcher</h1>
       <input type="text" class="search-input" id="text-search" placeholder="Search...">
       <p class="lead">
-        <a class="btn btn-primary btn-lg" data-name="bird" id="search" role="button">Search</a>
+        <a class="btn btn-primary btn-lg"  id="search" role="button">Search</a>
       </p>
 
       <!-- Div for the gif buttons -->
       <div id="test"></div>
       <div class="card-body" id="new-btns">
-        <!-- <button class="btn-primary" id="guitar">Guitar</button>
-        <button class="btn-primary" id="80s">80s</button>
-        <button class="btn-primary" id="cat">Cat</button>
-        <button class="btn-primary" id="dog">Dog</button>
-        <button class="btn-primary" id="bird">Bird</button> -->
       
       </div>
-
-      <!-- Div for the gifs -->
  
 
     </div>
 
-     <div class="card-body gifs text-center" id="gifs">
+     <div class="card-body gifs" id="gifs">
         
 
       </div>
