added tables for displaying gifs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,24 @@
     </div>
 
      <div class="gifs" id="gifs">
-        
+        <table class="table">
+            <thread>
+                <tr>
+                    <th scope="col">Rating</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Gif</th>
+
+                </tr>
+            </thread>
+            <tbody id="gif-append">
+                <!-- <td id="tdname"></td>
+                <td id="tdrole"></td>
+                <td id="tdstartdate"></td>
+                <td id="tdmonthsworked"></td>
+                <td id="tdmonthleyrate"></td>
+                <td id="tdtotalbilled"></td> -->
+            </tbody>
+        </table>
 
       </div>
 
